--- a/View/UserView/TestScreensView.xaml
+++ b/View/UserView/TestScreensView.xaml
@@ -34,5 +34,9 @@
             Text="To User Saved Recipes"
             Command="{Binding NavigateToUserSavedRecipes}" />
 
+        <Button
+            Text="To Edit Collection"
+            Command="{Binding NavigateToEditCollection}" />
+
     </VerticalStackLayout>
 </ContentPage>
